background sound and other game music added

--- a/Index.html
+++ b/Index.html
@@ -9,5 +9,10 @@
     </head>
     <body>
         <canvas id="board"></canvas>
+        <audio id="background-music" src="./WhatsApp Audio 2024-06-09 at 10.10.54_e4dfddb4.mp3" ></audio>
+        <audio id="gameover-sound" src="./WhatsApp Audio 2024-06-09 at 10.10.52_ed18a59f.mp3"></audio>
+        <audio id="collision-sound" src="./WhatsApp Audio 2024-06-09 at 10.10.54_d965a718.mp3"></audio>
+        <audio id="score-increase-sound" src="./WhatsApp Audio 2024-06-09 at 10.10.54_d39f8668.mp3"></audio>
+
     </body>
 </html> 
